Fix for squished inlined images
Just uploaded a fix for the squished LinkedIn images for non-preview pane views as v1.5.3.

Why they were squished: I was applying a max-width of 100% to keep really large inlined images from forcing the whole screen to scroll horizontally. For some reason, that max-width squished profile photos on LinkedIn invites.

Why it isn't fixed for preview pane: I'm now calculating the max-width of the content and setting the max-width to a pixel value but Preview Pane has a dynamic content width that I need to do more to detect and set.

--- a/gmail/style.css
+++ b/gmail/style.css
@@ -1,5 +1,5 @@
 /* ==================================================
- * SIMPLIFY GMAIL v1.5.1
+ * SIMPLIFY GMAIL v1.5.3
  * By Michael Leggett: leggett.org
  * Copyright (c) 2019 Michael Hart Leggett
  * Repo: github.com/leggett/simplify/blob/master/gmail/
@@ -907,9 +907,12 @@ html.simpl .ata-asE .ata-asJ {
 }
 
 /* Keep inline images from being wider than the current view */
+/* TODO: This won't work in split pane view */
 html.simpl table.Bs .gs img {
+    max-width: calc(var(--content-width) - 80px);
+}
+html.simpl.splitView table.Bs .gs img {
     max-width: 100%;
-    margin-right: 0px !important;
 }
 
 /* Boost width of the cell that has the reply and more actions buttons */
